--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=Wendy One:wght@400&display=swap"
     />
   </head>
-  <body>
+  <body> 
     <div class="portafolio">
       <div class="bienvenida">
         <div class="emanuel-berdugo-parent">
@@ -747,6 +747,10 @@
           window.open("https://www.instagram.com/emanuelberdugo_22/");
         });
       }
+      </script>
+  </body>
+</html>
+
       </script>
   </body>
 </html>
